# nonebot-plugin-template

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  feature.md  feature_request.yml
.github/workflows/: test.yml
src/nonebot_plugin_template/: __init__.py
